manifests/codius/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: codius-host
  namespace: codius-system
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - $(CODIUS_HOSTNAME)
    secretName: codius-host-cert
  rules:
  - host: $(CODIUS_HOSTNAME)
    http:
      paths:
      - path: /
        backend:
          serviceName: codius-web
          servicePort: 3000
      - path: /.well-known/pay
        backend:
          serviceName: receipt-verifier
          servicePort: 3001
      - path: /token
        backend:
          serviceName: codius-auth
          servicePort: 8080
      - path: /{id:balances/.*:creditReceipt$}
        backend:
          serviceName: receipt-verifier
          servicePort: 3000
      - path: /favicon.ico
        backend:
          serviceName: codius-web
          servicePort: 3000
      - path: /{id:services/.*$}
        backend:
          serviceName: codius-operator-services-api
          servicePort: 8081

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: codius-host
  namespace: default
spec:
  rules:
  - host: $(CODIUS_HOSTNAME)
    http:
      paths:
      - path: /api
        backend:
          serviceName: kubernetes
          servicePort: 443
      - path: /openapi/v2
        backend:
          serviceName: kubernetes
          servicePort: 443
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: codius-services
  namespace: codius-system
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - "*.$(CODIUS_HOSTNAME)"
    secretName: codius-host-cert
  rules:
  - host: "*.$(CODIUS_HOSTNAME)"
    http:
      paths:
      - path: /
        backend:
          serviceName: codius-operator-services-proxy
          servicePort: 8082
